@@ -20,6 +20,8 @@ Version 1.3.2
 - fixed Find to search in all plural forms instead of only the first one
 - added "whole words only" option to Find tool (Olivier Sannier)
 - added default parsers for more programming languages supported by xgettext
+- [Win32] fixed list control corruption when updated catalog had fewer items
+  than before the update
 - added more translations:
      Korean (Hojin Choi)
      Hebrew (Nir Lavi)
